--- a/index.html
+++ b/index.html
@@ -17,89 +17,91 @@
 
 <body>
 
-    <head>
-        <div class="navbar">
-            <div class="logo-principal">
-                <a href="" class="logo">Industrious</a>
-            </div>
-            <div class="active-menu">
-                <span class="menu"><i class="fas fa-bars"></i>Menu</span>
-            </div>
-        </div>
-    </head>
-
-    <main>
-        <div class="industrious_banner">
-          <div class="industrious">
-              <div class="container">
-                <h1 class="industrious-title">industrious</h1>
-                <h3 class="industrious-subtitle">A responsive business oriented template with a video background <br />
-                    designed by TEMPLATED and released under the Creative Commons License.</h3>
-              </div>
+  <!-- Header NavBar - Inicio -->
+  <head>
+      <nav class="navbar">
+          <div class="navbar-logo-principal">
+              <a href="" class="navbar-logo">Industrious</a>
           </div>
+          <div class="navbar-menu-ativa">
+              <span class="navbar-menu"><i class="fas fa-bars"></i>Menu</span>
+          </div>
+      </nav>
+  </head>
+  <!-- Header NavBar - Fim -->
+
+  <!-- Industrious - Inicio -->
+    <main class="industrious">
+        <div class="industrious-filtro">
+            <div class="container">
+              <h1 class="industrious-titulo">industrious</h1>
+              <h3 class="industrious-subtitulo">A responsive business oriented template with a video background <br />
+                    designed by <span class="industrious-templated">templated</span> and released under the Creative Commons License.</h3>
+            </div>
         </div>
     </main>
+    <!-- Industrious - Fim -->
 
-    <section>
-        <div class="turpis_banner">
-          <div class="turpis">
+    <!-- Turpis - Inicio -->
+    <section class="turpis">
+          <div class="turpis-filtro">
             <div class="container">
-              <h2 class="turpis-title">SEM TURPIS AMET SEMPER</h2>
-              <p class="turpis-paragraph">In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis
-              commodo ornare <br/>
-              aliquet accumsan erat tempus amet porttitor.</p>
+              <h2 class="turpis-titulo">SEM TURPIS AMET SEMPER</h2>
+              <p class="turpis-paragrafo">In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare  aliquet accumsan erat tempus amet porttitor.</p>
 
-              <div class="row">
-                  <div class="box-option col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-id-card option-icon"></i>
-                      <h3 class="option-subtitle">FEUGIAT CONSEQUAT</h3>
-                      <p class="option-paragraph">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
+              <div class="lista-de-vantagem row">
+                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
+                      <i class="far fa-id-card vantagem-icone"></i>
+                      <h3 class="vantagem-subtitulo">FEUGIAT CONSEQUAT</h3>
+                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
                   </div>
-                  <div class="box-option col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-file-alt option-icon"></i>
-                      <h3 class="option-subtitle">ANTE SEM INTEGER</h3>
-                      <p class="option-paragraph">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
+                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
+                      <i class="far fa-file-alt vantagem-icone"></i>
+                      <h3 class="vantagem-subtitulo">ANTE SEM INTEGER</h3>
+                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
                   </div>
-                  <div class="box-option col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-save option-icon"></i>
-                      <h3 class="option-subtitle">IPSUM CONSEQUAT</h3>
+                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
+                      <i class="far fa-save vantagem-icone"></i>
+                      <h3 class="vantagem-subtitulo">IPSUM CONSEQUAT</h3>
                       <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
                   </div>
-                  <div class="box-option col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-chart-bar option-icon"></i>
-                      <h3 class="option-subtitle">INTERDUM GRAVIDA</h3>
-                      <p class="option-paragraph">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
+                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3 col-xs-4">
+                      <i class="far fa-chart-bar vantagem-icone"></i>
+                      <h3 class="vantagem-subtitulo">INTERDUM GRAVIDA</h3>
+                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
                   </div>
-                  <div class="box-option col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-paper-plane option-icon"></i>
-                      <h3 class="option-subtitle">FAUCIBUS CONSEQUAT</h3>
-                      <p class="option-paragraph">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
+                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3 col-xs-4">
+                      <i class="far fa-paper-plane vantagem-icone"></i>
+                      <h3 class="vantagem-subtitulo">FAUCIBUS CONSEQUAT</h3>
+                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
                   </div>
-                  <div class="box-option col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-square option-icon"></i>
-                      <h3 class="option-subtitle">ACCUMSAN VIVERRA</h3>
-                      <p class="option-paragraph">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
+                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3 col-xs-4">
+                      <i class="far fa-square vantagem-icone"></i>
+                      <h3 class="vantagem-subtitulo">ACCUMSAN VIVERRA</h3>
+                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
                   </div>
               </div>
           </div>
         </div>
-      </div>
     </section>
+    <!-- Turpis - Fim -->
 
+    <!-- Curabitur - Inicio -->
     <section class="curabitur">
-        <div class="curabitur_filter">
-          <div class="container">
-            <h1 class="curabitur-subtitle">CURABITUR ULLAMCORPER ULTRICIES</h1>
-            <p class="curabitur-paragraph">Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+        <div class="curabitur-filtro">
+          <div class="curabitur-texts container">
+            <h1 class="curabitur-subtitulo">CURABITUR ULLAMCORPER ULTRICIES</h1>
+            <p class="curabitur-paragrafo">Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
           </div>
         </div>
     </section>
+    <!-- Curabitur - Inicio -->
 
 </body>
 
