--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
                       <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
                   </div>
-                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3 col-xs-4">
+                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
                       <i class="far fa-chart-bar vantagem-icone"></i>
                       <h3 class="vantagem-subtitulo">INTERDUM GRAVIDA</h3>
                       <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
                   </div>
-                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3 col-xs-4">
+                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
                       <i class="far fa-paper-plane vantagem-icone"></i>
                       <h3 class="vantagem-subtitulo">FAUCIBUS CONSEQUAT</h3>
                       <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
                   </div>
-                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3 col-xs-4">
+                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
                       <i class="far fa-square vantagem-icone"></i>
                       <h3 class="vantagem-subtitulo">ACCUMSAN VIVERRA</h3>
                       <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
@@ -96,12 +96,54 @@
     <section class="curabitur">
         <div class="curabitur-filtro">
           <div class="curabitur-texts container">
-            <h1 class="curabitur-subtitulo">CURABITUR ULLAMCORPER ULTRICIES</h1>
+            <h2 class="curabitur-subtitulo">CURABITUR ULLAMCORPER ULTRICIES</h2>
             <p class="curabitur-paragrafo">Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
           </div>
         </div>
     </section>
     <!-- Curabitur - Inicio -->
+
+    <!-- Faucibus - Inicio -->
+    <section class="faucibus">
+      <div class="faucibus-filtro">
+        <div class="container">
+          <h2 class="faucibus-subtitulo">CURABITUR ULLAMCORPER ULTRICIES</h2>
+          <p class="faucibus-paragrafo">In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+          <div class="row faucibus-lista-avaliacao">
+
+            <div class="faucibus-avaliacao col-xs-12 col-sm-12 col-md-5 col-lg-3">
+              <div class="faucibus-avaliacao-text">
+                <p class="faucibus-avaliacao-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+              </div>
+              <div class="faucibus-avaliacao-pessoa">
+                <img class="faucibus-pessoa-imagem" src="./img/mulher_sorrindo.jpg" alt="Rosto de uma mulher com um sorriso discreto, sem mostrar os dentes">
+                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jane Doe CEO</span> - ABC Inc.</p>
+              </div>
+            </div>
+            <div class="faucibus-avaliacao col-xs-12 col-sm-12 col-md-5 col-lg-3">
+              <div class="faucibus-avaliacao-text">
+                <p class="faucibus-avaliacao-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+              </div>
+              <div class="faucibus-avaliacao-pessoa">
+                <img class="faucibus-pessoa-imagem" src="./img/homem_barbudo.jpg" alt="Homem barbudo com cara de serio">
+                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jane Doe CEO</span> - ABC Inc.</p>
+              </div>
+            </div>
+            <div class="faucibus-avaliacao col-xs-12 col-sm-12 col-md-5 col-lg-3">
+              <div class="faucibus-avaliacao-text">
+                <p class="faucibus-avaliacao-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+              </div>
+              <div class="faucibus-avaliacao-pessoa">
+                <img class="faucibus-pessoa-imagem" src="./img/mulher.jpg" alt="Rosto de uma mulher sorrindo">
+                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jane Doe CEO</span> - ABC Inc.</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Faucibus - Fim -->
 
 </body>
 
