Footer pela metade

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </div>
               <div class="faucibus-avaliacao-pessoa">
                 <img class="faucibus-pessoa-imagem" src="./img/mulher_sorrindo.jpg" alt="Rosto de uma mulher com um sorriso discreto, sem mostrar os dentes">
-                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jane Doe CEO</span> - ABC Inc.</p>
+                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jane Doe</span> CEO - ABC Inc.</p>
               </div>
             </div>
             <div class="faucibus-avaliacao col-xs-12 col-sm-12 col-md-5 col-lg-3">
@@ -126,7 +126,7 @@
               </div>
               <div class="faucibus-avaliacao-pessoa">
                 <img class="faucibus-pessoa-imagem" src="./img/homem_barbudo.jpg" alt="Homem barbudo com cara de serio">
-                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jane Doe CEO</span> - ABC Inc.</p>
+                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">John Doe</span> CEO - ABC Inc.</p>
               </div>
             </div>
             <div class="faucibus-avaliacao col-xs-12 col-sm-12 col-md-5 col-lg-3">
@@ -135,7 +135,7 @@
               </div>
               <div class="faucibus-avaliacao-pessoa">
                 <img class="faucibus-pessoa-imagem" src="./img/mulher.jpg" alt="Rosto de uma mulher sorrindo">
-                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jane Doe CEO</span> - ABC Inc.</p>
+                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jante Smith</span> CEO - ABC Inc.</p>
               </div>
             </div>
 
@@ -144,6 +144,53 @@
       </div>
     </section>
     <!-- Faucibus - Fim -->
+
+    <!-- Footer - Inicio -->
+    <footer class="rotape">
+      <div class="container">
+        <div class="row rotape-lista">
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="rotape-item">
+              <h3 class="rotape-subtitulo">ACCUMSAN MONTES VIVERRA</h3>
+              <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="rotape-item">
+              <h3 class="rotape-subtitulo">SEM TURPIS AMET SEMPER</h3>
+              <ul>
+                <li><a>Dolor pulvinar sed etiam.</a></li>
+                <li><a>Etiam vel lorem sed amet.</a></li>
+                <li><a>Felis enim feugiat viverra.</a></li>
+                <li><a>Dolor pulvinar magna etiam.</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="rotape-item">
+              <h3 class="rotape-subtitulo">SEM TURPIS AMET SEMPER</h3>
+              <div class="rotape-rede-social">
+                <i class="fab fa-facebook-f"></i>
+                <a href="#"></a>
+              </div>
+              <div class="rotape-rede-social">
+                <i class="fab fa-twitter"></i>
+                <a href="#"></a>
+              </div>
+              <div class="rotape-rede-social">
+                <i class="fab fa-instagram"></i>
+                <a href="#"></a>
+              </div>
+              <div class="rotape-rede-social">
+                <i class="fab fa-git"></i>
+                <a href="#"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer - Fim -->
 
 </body>
 
