--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
         crossorigin="anonymous">
+    <link rel="icon" href="./img/icone.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/grid.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css">
-    <script src="main.js"></script>
 
 </head>
 
@@ -25,6 +25,14 @@
           </div>
           <div class="navbar-menu-ativa">
               <span class="navbar-menu"><i class="fas fa-bars"></i>Menu</span>
+          </div>
+          <div class="ativa">
+            <a class="ativa-x" href="#"><i class="fas fa-times"></i><a href="#">
+            <ul class="ativa-lista-links">
+              <li class="ativa-link"><a class="ativa-link-texto" href="#">Home</a></li>
+              <li class="ativa-link"><a class="ativa-link-texto" href="#">Elements</a></li>
+              <li class="ativa-link"><a class="ativa-link-texto" href="#">Generic</a></li>
+            </ul>
           </div>
       </nav>
   </head>
@@ -48,45 +56,53 @@
             <div class="container">
               <h2 class="turpis-titulo">SEM TURPIS AMET SEMPER</h2>
               <p class="turpis-paragrafo">In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare  aliquet accumsan erat tempus amet porttitor.</p>
-
+              <!-- Turpis Lista - Inicio -->
               <div class="lista-de-vantagem row">
-                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-id-card vantagem-icone"></i>
+                  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="vantagem-item">
+                      <a href="#"><i class="far fa-id-card vantagem-icone"></i></a>
                       <h3 class="vantagem-subtitulo">FEUGIAT CONSEQUAT</h3>
-                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
-                              integer non faucibus.</p>
+                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                    </div>
                   </div>
-                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-file-alt vantagem-icone"></i>
+                  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="vantagem-item">
+                      <a href="#"><i class="far fa-file-alt vantagem-icone"></i></a>
                       <h3 class="vantagem-subtitulo">ANTE SEM INTEGER</h3>
-                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
-                              integer non faucibus.</p>
+                      <p  class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                    </div>
                   </div>
-                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-save vantagem-icone"></i>
+                  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="vantagem-item">
+                      <a href="#"><i class="far fa-save vantagem-icone"></i></a>
                       <h3 class="vantagem-subtitulo">IPSUM CONSEQUAT</h3>
-                      <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
-                              integer non faucibus.</p>
+                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                    </div>
                   </div>
-                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-chart-bar vantagem-icone"></i>
+                  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="vantagem-item">
+                      <a href="#"><i class="far fa-chart-bar vantagem-icone"></i></a>
                       <h3 class="vantagem-subtitulo">INTERDUM GRAVIDA</h3>
-                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
-                              integer non faucibus.</p>
+                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                    </div>
                   </div>
-                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-paper-plane vantagem-icone"></i>
+                  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="vantagem-item">
+                      <a href="#"><i class="far fa-paper-plane vantagem-icone"></i></a>
                       <h3 class="vantagem-subtitulo">FAUCIBUS CONSEQUAT</h3>
-                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
-                              integer non faucibus.</p>
+                      <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                    </div>
                   </div>
-                  <div class="vantagem col-xs-12 col-sm-12 col-md-5 col-lg-3">
-                      <i class="far fa-square vantagem-icone"></i>
+                  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="vantagem-item">
+                      <a href="#"><i class="far fa-square vantagem-icone"></i></a>
                       <h3 class="vantagem-subtitulo">ACCUMSAN VIVERRA</h3>
                       <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
+                    </div>
                   </div>
               </div>
+              <!-- Turpis Lista - Fim -->
           </div>
         </div>
     </section>
@@ -107,38 +123,44 @@
     <section class="faucibus">
       <div class="faucibus-filtro">
         <div class="container">
-          <h2 class="faucibus-subtitulo">CURABITUR ULLAMCORPER ULTRICIES</h2>
+          <h2 class="faucibus-subtitulo">FAUCIBUS CONSEQUAT LOREM</h2>
           <p class="faucibus-paragrafo">In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+          <!-- Faucibus Lista - Inicio -->
           <div class="row faucibus-lista-avaliacao">
-
-            <div class="faucibus-avaliacao col-xs-12 col-sm-12 col-md-5 col-lg-3">
-              <div class="faucibus-avaliacao-text">
-                <p class="faucibus-avaliacao-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-              </div>
-              <div class="faucibus-avaliacao-pessoa">
-                <img class="faucibus-pessoa-imagem" src="./img/mulher_sorrindo.jpg" alt="Rosto de uma mulher com um sorriso discreto, sem mostrar os dentes">
-                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jane Doe</span> CEO - ABC Inc.</p>
-              </div>
-            </div>
-            <div class="faucibus-avaliacao col-xs-12 col-sm-12 col-md-5 col-lg-3">
-              <div class="faucibus-avaliacao-text">
-                <p class="faucibus-avaliacao-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-              </div>
-              <div class="faucibus-avaliacao-pessoa">
-                <img class="faucibus-pessoa-imagem" src="./img/homem_barbudo.jpg" alt="Homem barbudo com cara de serio">
-                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">John Doe</span> CEO - ABC Inc.</p>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+              <div class="faucibus-avaliacao">
+                <div class="faucibus-avaliacao-text">
+                  <p class="faucibus-avaliacao-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                </div>
+                <div class="faucibus-avaliacao-pessoa">
+                  <img class="faucibus-pessoa-imagem" src="./img/mulher_sorrindo.jpg" alt="Rosto de uma mulher com um sorriso discreto, sem mostrar os dentes">
+                  <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jane Doe</span> CEO - ABC Inc.</p>
+                </div>
               </div>
             </div>
-            <div class="faucibus-avaliacao col-xs-12 col-sm-12 col-md-5 col-lg-3">
-              <div class="faucibus-avaliacao-text">
-                <p class="faucibus-avaliacao-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
-              </div>
-              <div class="faucibus-avaliacao-pessoa">
-                <img class="faucibus-pessoa-imagem" src="./img/mulher.jpg" alt="Rosto de uma mulher sorrindo">
-                <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jante Smith</span> CEO - ABC Inc.</p>
+            <div class=" col-xs-12 col-sm-12 col-md-6 col-lg-4">
+              <div class="faucibus-avaliacao">
+                <div class="faucibus-avaliacao-text">
+                  <p class="faucibus-avaliacao-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                </div>
+                <div class="faucibus-avaliacao-pessoa">
+                  <img class="faucibus-pessoa-imagem" src="./img/homem_barbudo.jpg" alt="Homem barbudo com cara de serio">
+                  <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">John Doe</span> CEO - ABC Inc.</p>
+                </div>
               </div>
             </div>
-
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+              <div class="faucibus-avaliacao">
+                <div class="faucibus-avaliacao-text">
+                  <p class="faucibus-avaliacao-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+                </div>
+                <div class="faucibus-avaliacao-pessoa">
+                  <img class="faucibus-pessoa-imagem" src="./img/mulher.jpg" alt="Rosto de uma mulher sorrindo">
+                  <p class="faucibus-pessoa-paragrafo">- <span class="faucibus-pessoa-paragrafo-destaque">Jante Smith</span> CEO - ABC Inc.</p>
+                </div>
+              </div>
+            </div>
+            <!-- Faucibus Lista - Fim -->
           </div>
         </div>
       </div>
@@ -148,49 +170,54 @@
     <!-- Footer - Inicio -->
     <footer class="rotape">
       <div class="container">
+        <!-- Footer Listas - Inicio -->
         <div class="row rotape-lista">
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
             <div class="rotape-item">
-              <h3 class="rotape-subtitulo">ACCUMSAN MONTES VIVERRA</h3>
+              <h3 class="rotape-subtitulo">Accumsan montes viverra</h3>
               <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
             </div>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
             <div class="rotape-item">
-              <h3 class="rotape-subtitulo">SEM TURPIS AMET SEMPER</h3>
-              <ul>
-                <li><a>Dolor pulvinar sed etiam.</a></li>
-                <li><a>Etiam vel lorem sed amet.</a></li>
-                <li><a>Felis enim feugiat viverra.</a></li>
-                <li><a>Dolor pulvinar magna etiam.</a></li>
+              <h3 class="rotape-subtitulo">Sem turpis amet semper</h3>
+              <ul class="rotape-lista-links">
+                <li class="rotape-link"><a class="rotape-link-texto" href="#">Dolor pulvinar sed etiam.</a></li>
+                <li class="rotape-link"><a class="rotape-link-texto" href="#">Etiam vel lorem sed amet.</a></li>
+                <li class="rotape-link"><a class="rotape-link-texto" href="#">Felis enim feugiat viverra.</a></li>
+                <li class="rotape-link"><a class="rotape-link-texto" href="#">Dolor pulvinar magna etiam.</a></li>
               </ul>
             </div>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
             <div class="rotape-item">
-              <h3 class="rotape-subtitulo">SEM TURPIS AMET SEMPER</h3>
+              <h3 class="rotape-subtitulo">Magna sed ipsum</h3>
               <div class="rotape-rede-social">
-                <i class="fab fa-facebook-f"></i>
-                <a href="#"></a>
+                <a class="rotape-rede-social-link" href="#"><i class="rotape-rede-social-icone fab fa-twitter"></i>Twitter</a>
               </div>
               <div class="rotape-rede-social">
-                <i class="fab fa-twitter"></i>
-                <a href="#"></a>
+                <a class="rotape-rede-social-link" href="#"><i class="rotape-rede-social-icone fab fa-facebook-f"></i>Facebook</a>
               </div>
               <div class="rotape-rede-social">
-                <i class="fab fa-instagram"></i>
-                <a href="#"></a>
+                <a class="rotape-rede-social-link" href="#"><i class="rotape-rede-social-icone fab fa-instagram"></i>Instagram</a>
               </div>
               <div class="rotape-rede-social">
-                <i class="fab fa-git"></i>
-                <a href="#"></a>
+                <a class="rotape-rede-social-link" href="#"><i class="rotape-rede-social-icone fab fa-git"></i>Github</a>
               </div>
             </div>
           </div>
         </div>
+        <!-- Footer Listas - Fim -->
+        <!-- Footer Copyright - Inicio -->
+        <div class="rotape-copyright">
+          <p class="copyright">&copy; Untitled. Photos Unsplash, Video Coverr.<p>
+        </div>
+        <!-- Footer Copyright - Fim  -->
       </div>
     </footer>
     <!-- Footer - Fim -->
+
+    <script src="./js/style.js"></script>
 
 </body>
 
