--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/grid.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css">
-
 </head>
 
 <body>
@@ -218,6 +217,10 @@
     <!-- Footer - Fim -->
 
     <script src="./js/style.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 
 </body>
 
