--- a/index.html
+++ b/index.html
@@ -19,18 +19,15 @@
   <!-- Header NavBar - Inicio -->
   <head>
       <nav class="navbar">
-          <div class="navbar-logo-principal">
-              <a href="" class="navbar-logo">Industrious</a>
-          </div>
-          <div class="navbar-menu-ativa">
-              <span class="navbar-menu"><i class="fas fa-bars"></i>Menu</span>
-          </div>
-          <div class="ativa">
-            <a class="ativa-x" href="#"><i class="fas fa-times"></i><a href="#">
-            <ul class="ativa-lista-links">
-              <li class="ativa-link"><a class="ativa-link-texto" href="#">Home</a></li>
-              <li class="ativa-link"><a class="ativa-link-texto" href="#">Elements</a></li>
-              <li class="ativa-link"><a class="ativa-link-texto" href="#">Generic</a></li>
+          <a href="navbar-logo" class="navbar-logo">Industrious</a>
+          <a class="navbar-menu"><i class="fas fa-bars"></i> Menu</a>
+
+          <div class="sidebar closed">
+            <a class="btn-close"><i class="btn-close-icon fas fa-times"></i></a>
+            <ul class="sidebar-lista-links">
+              <li class="sidebar-link"><a class="sidebar-link-texto" href="#">Home</a></li>
+              <li class="sidebar-link"><a class="sidebar-link-texto" href="#">Elements</a></li>
+              <li class="sidebar-link"><a class="sidebar-link-texto" href="#">Generic</a></li>
             </ul>
           </div>
       </nav>
@@ -216,11 +213,8 @@
     </footer>
     <!-- Footer - Fim -->
 
+    <script src="./js/jquery-3.3.1.min.js"></script>
     <script src="./js/style.js"></script>
-    <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
 
 </body>
 
